# haskell-logo

./: README.md  hs-logo.cabal  shell.nix  stack.yaml
app/: Main.hs
