name:                hs-logo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/basic#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hs-logo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , svg-builder
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/basic
